--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <div class="card-header">
         <div class="col-xs-8">
-            <p>Leeds,UK</p>
+            <p>{{currentLocation}}</p>
         </div>
-        <div class="col-xs-4 text-xs-right">
-            <h1>{{weatherData.temp | number: '.0-0' }}&deg;</h1>
+        <div class="col-xs-4 text-xs-right" (click)=toggleTempUnit()>
+            <h1>{{weatherData.temp | tempUnit: currentTempUnit | number: '.0-0' }}&deg;</h1>
         </div>
 
     </div>
@@ -13,9 +13,9 @@
         <p>{{weatherData.summary}}</p>
     </div>
     <div class="card-footer">
-        <div class="col-xs-5">
+        <div class="col-xs-5" (click)=toggleSpeedUnit()>
             <p>Wind</p>
-            <p>{{weatherData.wind}}mph</p>
+            <p>{{weatherData.wind | speedUnit: currentSpeedUnit}}</p>
         </div>
         <div class="col-xs-5 offset-xs-2">
             <p>Humidity</p>
