--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -1,19 +1,19 @@
-<div class="card">
+<div class="card" (click)=toggleUnits()>
     <div class="card-header">
         <div class="col-xs-8">
             <p>{{currentLocation}}</p>
         </div>
-        <div class="col-xs-4 text-xs-right" (click)=toggleTempUnit()>
+        <div class="col-xs-4 text-xs-right" >
             <h1>{{weatherData.temp | tempUnit: currentTempUnit | number: '.0-0' }}&deg;</h1>
         </div>
 
     </div>
     <div class="card-block">
-        <h1>0</h1>
+        <canvas id="icon"></canvas>
         <p>{{weatherData.summary}}</p>
     </div>
     <div class="card-footer">
-        <div class="col-xs-5" (click)=toggleSpeedUnit()>
+        <div class="col-xs-5" >
             <p>Wind</p>
             <p>{{weatherData.wind | speedUnit: currentSpeedUnit}}</p>
         </div>
